# boX11

./: Setup.hs  boX11.cabal
src/: BoX11.hs  Main.hs  Makefile  MapTree.hs  TTree.hs  XHK.hs  XHotkey.hs  ask.c  boX11.c  boX11.h  boxlaunch.c  export.hs  export_stub.h  loader.c  main.c  mainw.c  test.c  testatic.c  testbox.c  testreader.hs  testselinput.c  win.c
src/BoX11/: Basic.hs  X.hs
src/BoX11/Basic/: Types.hs
src/XHotkey/: Core.hs  Types.hs
src/boxghc/: Main.hs
src/xlib/: grabtest.c  grabtest.hs  grabtest2.c  sendtest.c  testbind.hs  testbit.c  testerr.hs  testgrab2.c  testhooks.hs  testkeymap.c  testkeysym.c  testsize.c  teststate.hs  testtime.c  testvals.c
tests/: .Main1.hs.un~  .Makefile.un~  Main.hi  Main1.hi  Main1.hs  Main1.hs~  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main6.hs  Main8.hs  Main9.hs  Main_stub.h  Makefile  test
