name:       boX11
version:    0.3.0
synopsis:   A multiboxing system for wine
category:   Multibox
license:    LGPL
author:     Alejandro Castello
maintainer: a.castello.pas@gmail.com
cabal-version: >= 1.2
build-type: Custom

library
    hs-source-dirs:     src
    exposed-modules:    BoX11,
                        BoX11.Basic
    build-depends:      base,
                        bytestring
executable boxghc
    hs-source-dirs:     src/boxghc
    main-is:            Main.hs
    extensions:         ForeignFunctionInterface
    build-depends:      directory, filepath, process, unix
