name:       boX11
version:    0.5.0
synopsis:   A multiboxing system for wine
category:   Multibox
license:    LGPL
author:     Alejandro Castello
maintainer: a.castello.pas@gmail.com
cabal-version: >= 1.2
build-type: Custom

library
    hs-source-dirs:     src
--     c-sources:          cbits/boX11.c 
--     include-dirs:       /usr/include/wine/windows
--     extra-libraries:    :user32.dll.so
--     ld-options:         -rpath-link=/usr/lib/wine/ 
    exposed-modules:    BoX11,
                        BoX11.Basic
                        BoX11.Basic.Types
                        BoX11.X
    build-depends:      base,
                        containers,
                        transformers,
                        mtl,
                        array,
                        bytestring,
                        XHotkey,
                        X11
    extensions:         DoAndIfThenElse
executable boxghc
    hs-source-dirs:     src/boxghc
    ghc-options:        -threaded
    main-is:            Main.hs
    extensions:         ForeignFunctionInterface
    build-depends:      directory, filepath, process, unix
